--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 <body>
 <canvas id="canvas1"></canvas>
+<!-- characters -->
+<!-- props -->
+<!-- environment -->
+<img id="layer1" src="assets/layer1.png" alt="background-layer1">
+<img id="layer2" src="assets/layer2.png" alt="background-layer2">
+<img id="layer3" src="assets/layer3.png" alt="background-layer3">
+<img id="layer4" src="assets/layer4.png" alt="background-layer4">
 <script src="script.js" type="module"></script>
 </body>
 </html>
