--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>
 <canvas id="canvas1"></canvas>
 <!-- characters -->
+<img id="player" src="assets/player.png" alt="player">
+<img id="angler1" src="assets/angler1.png" alt="angler1">
+<img id="angler2" src="assets/angler2.png" alt="angler2">
+<img id="lucky" src="assets/lucky.png" alt="lucky">
 <!-- props -->
 <!-- environment -->
 <img id="layer1" src="assets/layer1.png" alt="background-layer1">
