--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <img id="angler2" src="assets/angler2.png" alt="angler2">
 <img id="lucky" src="assets/lucky.png" alt="lucky">
 <!-- props -->
+<img id="projectile" src="assets/projectile.png" alt="projectile">
 <!-- environment -->
 <img id="layer1" src="assets/layer1.png" alt="background-layer1">
 <img id="layer2" src="assets/layer2.png" alt="background-layer2">
