--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>2D Side-scroller game</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -17,6 +20,7 @@
 <img id="lucky" src="assets/lucky.png" alt="lucky">
 <!-- props -->
 <img id="projectile" src="assets/projectile.png" alt="projectile">
+<img id="gears" src="assets/gears.png" alt="gears">
 <!-- environment -->
 <img id="layer1" src="assets/layer1.png" alt="background-layer1">
 <img id="layer2" src="assets/layer2.png" alt="background-layer2">
